# portal

./: .env.development  .env.local.example  .env.production  .env.staging  .gitignore  .solitarc.js  Anchor.toml  LICENSE  README.md  ROADMAP.md  TECHDEBT.md  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
app/portal/: .env.example  app.vue  contants.ts  nuxt.config.ts  package.json  tailwind.config.cjs  utils.ts
components/: BalanceDisplay.tsx  Header.module.css  Header.tsx  Hero.tsx  MobileAdapter.tsx  NotIndex.tsx  NotWalletAdapter.tsx  OwnSoap.tsx  SoapDealer.tsx  SoapGallery.tsx  WalletAdapter.tsx  WalletLogin.tsx  YourSoaps.tsx
context/: MobileWalletContext.tsx
idl/: soap_program.json
lib/: constants.ts
pages/: _app.tsx  collection.tsx  creator.tsx  dispenser.tsx  index.tsx  mobile.tsx  soaps.tsx
pages/api/: create.tsx  dispense.tsx  getHoldersList.tsx  mintSoap.tsx  signShdw.tsx  solPayMint.tsx
pages/creator/: fundPot.tsx  index.tsx
pages/dealer/: [soapAddress].tsx
pages/dispenser/: [soapAddress].tsx
pages/examiner/: [soapAddress].tsx
pages/link/: [linkName].tsx
pages/mintooor/: [soapAddress].tsx
pages/phantom/: onConnect.tsx  (+1 more)
programs/soap-program/: Cargo.toml
programs/soap-program/src/: constants.rs  errors.rs  lib.rs  states.rs
programs/soap-program/src/instructions/: create.rs  fund_pot.rs  init_user_profile.rs  mint.rs  mod.rs  withdraw_pot.rs
static/: .deeplink_demo.gif.icloud
styles/: globals.css
tests/: soap-program.ts  utils.ts
utils/: MobileWalletContext.tsx  decryptPayload.ts
(+24 files in other folders)
