[package]
name = "soap-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soap_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.26.0", features=["init-if-needed"] }
anchor-spl = { version = "0.26.0", features = ["metadata"] }
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.8.14"
assert_matches = "1.5.0"
bincode = "1.3.3"
solana-program-test = "1.8.14"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
bytemuck = "1.4.0"